# oxidelog

./: .dockerignore  .gitattributes  .gitignore  .gitstatus.txt  Cargo.toml  Dockerfile  PIPELINE_INTEGRATION_PATCH.txt  README.md  SPOOL_REPLAY_COMPLETE.md  SPOOL_REPLAY_IMPLEMENTATION.md  docker-compose.clickhouse.yml  nat-log-platform.html  oxidelog-main.tar  pencil-new.pen  tmp-export-422-fix.csv.zst  tmp-oxidelog-test.toml  日志检索结果.csv
.agents/skills/agent-customization/: SKILL.md
.claude/: settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml  routing-outcomes.json
.claude-flow/agents/: store.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.github/agents/: oxide-log.agent.md
.github/workflows/: auto-format.yml  ci.yml  clickhouse-build.yml  goal.yml
.superpowers/brainstorm/15736-1779244923/content/: oxidelog-layout-options.html
.superpowers/brainstorm/15736-1779244923/state/: server-stopped
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql
ant-design-pro-6.0.1/ant-design-pro-6.0.1/: package-lock.json  package.json
ant-design-pro-6.0.1/ant-design-pro-6.0.1/config/: config.ts  defaultSettings.ts  proxy.ts  routes.ts
ant-design-pro-6.0.1/ant-design-pro-6.0.1/src/: global.less
ant-design-pro-6.0.1/ant-design-pro-6.0.1/src/pages/oxidelog/: LogSearchPanel.tsx  index.tsx  searchParams.test.ts  searchParams.ts  style.less  types.ts  utils.tsx
ant-design-pro-6.0.1/ant-design-pro-6.0.1/src/pages/oxidelog/components/: MetricCard.tsx  Shell.tsx  StatusTags.tsx
ant-design-pro-6.0.1/ant-design-pro-6.0.1/src/pages/oxidelog/pages/: AssetsPage.tsx  LogSearchPage.tsx  OverviewPage.tsx  ParserPage.tsx  SourceGovernancePage.tsx
ant-design-pro-6.0.1/ant-design-pro-6.0.1/src/services/: oxidelog.ts
apps/fwlog-import/: Cargo.toml
apps/fwlog-import/src/: main.rs
apps/fwlogd/: Cargo.toml
apps/fwlogd/src/: main.rs  pipeline.rs  replay.rs
config/: local.toml  server.toml
crates/fwlog-adapter/: Cargo.toml
crates/fwlog-adapter/src/: adaptive.rs  control.rs  diagnostics.rs  generic.rs  learn.rs  lib.rs  route.rs  rule.rs  sangfor.rs  scope.rs
crates/fwlog-api/: Cargo.toml
crates/fwlog-api/src/: handlers.rs  lib.rs  search.rs
crates/fwlog-domain/: Cargo.toml
crates/fwlog-domain/src/: event.rs  lib.rs  metrics.rs  raw.rs
crates/fwlog-ingress/: Cargo.toml
crates/fwlog-ingress/src/: lib.rs  tcp.rs  udp.rs
crates/fwlog-spool/: Cargo.toml
crates/fwlog-spool/src/: lib.rs  replay.rs  segment.rs
crates/fwlog-storage/: Cargo.toml
crates/fwlog-storage/src/: archive.rs  clickhouse.rs  dual_db.rs  duckdb.rs  frozen.rs  governor.rs  hybrid.rs  lib.rs  lifecycle.rs
docs/: TESTING_PLAN.md  clickhouse-deployment.md  clickhouse-hybrid-architecture.md  clickhouse-integration-summary.md  dual-database-implementation-summary.md  dual-database-rotation.md
docs/superpowers/plans/: 2026-05-15-oxidelog-v3-local-goal.md  2026-05-17-oxidelog-p0-p1-p2-optimization.md  2026-05-18-device-fingerprint-admission-plan.md  2026-05-18-p1-fix-task-list.md  2026-05-19-adaptive-parser-compat-foundation.md  2026-05-19-zstd-export-jobs.md  2026-05-20-adaptive-parser-learning-loop.md  2026-05-20-oxidelog-antd-console-redesign.md
docs/superpowers/specs/: 2026-05-17-oxidelog-p0-p1-p2-operations-roadmap-design.md  2026-05-19-adaptive-parser-engine-design.md  2026-05-20-oxidelog-antd-console-redesign-design.md
scripts/: check-admission-ui.ps1  clickhouse-init.sql  compact-hot-linux.sh  compact-hot.ps1  deploy-linux.ps1  goal-linux.sh  goal.ps1  import-history-linux.sh  import-history.ps1  install-linux-service.sh  smoke-production.ps1  smoke-production.sh  uninstall-linux-service.sh
web/: O__src__umi-production_core_EmptyRoute_tsx_8cd9f3ac.e1748892.async.js  X__src__umi-production_core_EmptyRoute_tsx_193bcffe.7a26ae2a.async.js  Z__src__umi-production_core_EmptyRoute_tsx_37ec374b.8640884d.async.js  _006ed634.7f1eb8a8.async.js  _031c4152.9ea8fbb3.async.js  _0413f1fb.4902aa50.async.js  _07640e55.ba5a60e1.async.js  _0ac81c13.c057d040.async.js  _1365a9ff.5b0e24b8.async.js  _14165e4e.b79ffe07.async.js  _1952faf5.56f35a25.async.js  _1ca786dd.203f135b.async.js  _2087c003.d310cdb0.async.js  _20d978df.75f9504b.async.js  _22bb980c.13cef63a.async.js  _244ec35c.665887cd.async.js  _28029e13.8a9603f9.async.js  _2c2d87f8.09d7f193.async.js  _2d43bffe.67131123.async.js  _2dc488c1.7892bcb8.async.js  _2ee9beeb.3d2f8ab5.async.js  _346646b8.2d033c3f.async.js  _3ad4cda3.44d3347f.async.js  _3f4e1720.9a164a9e.async.js  _4dd94f01.e54d926c.async.js  _580fe9fe.afbd5195.async.js  _63c2e351.1551b69c.async.js  _63c2e351.6d4baa21.async.js  _64016957.292e012b.async.js  _6ec895f7.3496965c.async.js  _6ec895f7.95076675.async.js  _6ec895f7.a0ba216a.async.js  _6ec895f7.c0ba0016.async.js  _721cfe9a.18fd6389.async.js  _73798bb7.c8290bae.async.js  _73e72229.302d81de.async.js  _79dd3b7a.95279d9e.async.js  _7df83a81.82fa62b7.async.js  _84a5dee9.0880b450.async.js  _88997939.c03edc89.async.js  (+170 more)
web/oxidelog/: index.html
