[workspace]
resolver = "2"
members = [
  "apps/fwlogd",
  "crates/fwlog-domain",
  "crates/fwlog-adapter",
  "crates/fwlog-spool",
  "crates/fwlog-storage",
  "crates/fwlog-ingress",
  "crates/fwlog-api",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
duckdb = { version = "1", features = ["bundled"] }
flume = "0.11"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
