[package]
name = "fwlog-adapter"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arrayvec = "0.7"
chrono.workspace = true
fwlog-domain = { path = "../fwlog-domain" }
memchr = "2"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
