[package]
name = "fwlog-storage"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clickhouse = { version = "0.13", features = ["chrono"] }
csv.workspace = true
duckdb.workspace = true
fwlog-domain = { path = "../fwlog-domain" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true
